# platform

./: Cargo.toml
src/: basic_pipeline.rs  errors.rs  event_emitter.rs  main.rs  platform.rs  standard_pipeline.rs
src/mesh/: mod.rs
src/shaders/: triangle_f.glsl  triangle_v.glsl
