[package]
authors = ["Mark Hintz <markinportland7@gmail.com>"]
name = "platform"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
# gl = "*"
itertools = "0.6.2"
nalgebra = "*"
nphysics3d = "*"
rand = "*"
threadpool = "1.7.0"
sdl2 = "0.30"
gfx = "0.16"
gfx_core = "0.7"
gfx_device_gl = "0.14"
gfx_window_sdl = { version = "0.7.0", path = "../gfx/src/window/sdl" }
