[package]
authors = ["Mark Hintz <markinportland7@gmail.com>"]
name = "platform"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
itertools = "0.6"
nalgebra = "*"
nphysics3d = "*"
rand = "*"
threadpool = "1.7"
sdl2 = "0.30"
gfx = "0.17.1"
gfx_device_gl = "0.14"
gfx_window_sdl2 = "0.2.0"
gfx_window_glutin = "0.22.0"
gfx_window_glfw = "0.16.0"
